--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jun 04 15:22:14 CDT 2019
+#Tue Mar 09 15:14:12 MSK 2021
 ndk.dir=/Users/camilovega/Library/Android/sdk/ndk-bundle
-sdk.dir=/Users/camilovega/Library/Android/sdk
+sdk.dir=/Users/a.mukovozov/Library/Android/sdk
