--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
+import cvdevelopers.takehome.buildSrc.Libs
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-apply plugin: 'kotlin'
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
     ext.butterknife_version = '10.0.0'
     ext.compiler_version = "2.4.0-alpha7"
     repositories {
@@ -10,8 +10,8 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath Libs.androidGradlePlugin
+        classpath Libs.Kotlin.gradlePlugin
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -28,15 +28,4 @@ allprojects {
 
 repositories {
     mavenCentral()
-}
-
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
-compileTestKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
 }
